--- a/Exercise_3/styles.css
+++ b/Exercise_3/styles.css
@@ -6,7 +6,7 @@ body {
     overflow-x: hidden;
   }
   html {
-    background-color: #fcb13a; /* тот же цвет, что и у футера */
+    background-color: #fcb13a; 
   }
   .container {
     max-width: 1100px;
@@ -18,6 +18,8 @@ body {
     align-items: center;
   }
   
+
+
   .header {
     padding: 20px 0;
   }
