--- a/Matveev_IS_Advanced_Level/styles.css
+++ b/Matveev_IS_Advanced_Level/styles.css
@@ -14,8 +14,8 @@
   .container {
     max-width: 1200px;
     margin: 0 auto;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 45px;
+    padding-right: 45px;
   }
   
   .navbar {
@@ -1277,6 +1277,24 @@
     border-radius: 16px;
   }
   
+  .player {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .play-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #6466f1;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+  }
+
+
+
   .play-button {
     position: absolute;
     top: 50%;
